--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -21,13 +21,14 @@
 }
 .site-title {
   font-size: 3rem;
-  color: gray;
+  color: #5F6B61;
+  text-shadow: 2px 2px #5e9dc8; 
   font-weight: 700;
   margin: 3rem 0;
 }
 
 body {
-  background-color: lightblue;
-  color: darkblue;
-  text-shadow: 1px 1px darkgray; 
+  background-color: #DCF0F7;
+  color: #0c2c52;
+  text-shadow: 1px 1px #5e9dc8; 
 }
