--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -27,6 +27,11 @@
   margin: 3rem 0;
 }
 
+.post-list {
+  border-style: ridge;
+  border-color: #5F6B61;
+}
+
 body {
   background-color: #DCF0F7;
   color: #0c2c52;
