Yet another CSS iteration for post list page.

--- a/src/misc-styles.css
+++ b/src/misc-styles.css
@@ -4,9 +4,10 @@
 }
 
 .post-list article h2 link {
-  font-size: .8em;
+  font-size: .6em;
 }
 
 .post-list article p {
+  font-family: 'Courier New', Courier, monospace;
   font-size: .6em;
 }
