Minor CSS fixes

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,6 +1,6 @@
 .container {
     margin: auto;
-    max-width: 500px;
+    /* max-width: 500px; */
     font-family: sans-serif;
 }
 
@@ -30,5 +30,4 @@
 body {
   background-color: #DCF0F7;
   color: #0c2c52;
-  text-shadow: 1px 1px #5e9dc8;
 }
