--- a/src/misc-styles.css
+++ b/src/misc-styles.css
@@ -3,11 +3,13 @@
   flex-direction: column;
 }
 
-.post-list article h2 link {
+.post-list article h2 a {
   font-size: .6em;
+  border: 0em;
 }
 
 .post-list article p {
   font-family: 'Courier New', Courier, monospace;
   font-size: .6em;
+  border: 0em;
 }
