--- a/src/misc-styles.css
+++ b/src/misc-styles.css
@@ -1,12 +1,13 @@
 
 article h2 {
-  font-size: .6em;
+  font-size: 1em;
   margin-bottom: 0em;
 }
 
 article p {
   font-family: 'Courier New', Courier, monospace;
   font-size: .6em;
+  font-weight: bold;
   margin-top: 0em;
-  color: #FF0000;d
+  color: #FF0000;
 }
