--- a/src/pages/blog/post-list.module.css
+++ b/src/pages/blog/post-list.module.css
@@ -1,10 +1,10 @@
 
-article h2 {
+.post-list-link {
   font-size: 1em;
   margin-bottom: 0em;
 }
 
-article p {
+.post-list-date {
   font-family: 'Courier New', Courier, monospace;
   font-size: .6em;
   font-weight: bold;
