Add goatcounter for analytics

--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -101,5 +101,7 @@ ${base.late_load_js()}
     </script>
 ${body_end}
 ${template_hooks['body_end']()}
+<script data-goatcounter="https://playingwithquicksilver.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
